[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/play/EnemySpawner/EnemySpawner.gd" type="Script" id=1]
[ext_resource path="res://scenes/Enemy/EnemyFly/EnemyFly.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Enemy/EnemyBee/EnemyBee.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -62.7375, 11.3461, 0, 0, 363.848, -67.4317, 0, 0, 0, 0, 472.538, 23.4399, 0, 0, 0, 0, 668.535, 41.2579, 0, 0, 0, 0, 957.186, 153.511, 0, 0, 0, 0, 1003.51, 304.964, 0, 0, 0, 0, 871.66, 440.381, 0, 0, 0, 0, 625.772, 406.526, 0, 0, 0, 0, 322.867, 438.599, 0, 0, 0, 0, 73.415, 285.364, 0, 0, 0, 0, 57.3788, 182.02, 0, 0, 0, 0, 89.4512, -30.014, 0, 0, 0, 0, 363.848, -67.4317 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -230.257, 259.037, 0, 0, 0, 0, 48.3426, 147.314, 0, 0, 0, 0, 100.142, 112.53, 0, 0, 0, 0, 201.078, 138.828, 0, 0, 0, 0, 297.921, 182.02, 0, 0, 0, 0, 433.009, 225.096, 0, 0, 0, 0, 518.864, 169.547, 0, 0, 0, 0, 652.499, 192.711, 0, 0, 0, 0, 705.953, 149.948, 0, 0, 0, 0, 861.516, 171.355, 0, 0, 0, 0, 942.126, 256.208, 0, 0, 0, 0, 921.551, 360.2, 0, 0, 0, 0, 739.807, 415.435, 0, 0, 0, 0, 595.482, 354.854, 0, 0, 0, 0, 503.719, 393.387, 0, 0, 0, 0, 400.482, 383.487, 0, 0, 0, 0, 237.847, 427.328, 0, 0, 0, 0, 119.742, 367.327, 0, 0, 0, 0, 82.324, 249.728, 0, 0, 0, 0, 128.953, 165.699, 0, 0, 0, 0, 278.859, 104.887, 0, 0, 0, 0, 377.854, 174.184, 0, 0, 0, 0, 516.447, 145.9, 0, 0, 0, 0, 636.656, 168.527, 0, 0, 0, 0, 670.597, 216.61, 0, 0, 0, 0, 772.42, 182.669, 0, 0, 0, 0, 879.9, 223.681, 0, 0, 0, 0, 999.95, 253.292, 0, 0, 0, 0, 1156.75, 176.675 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1175.47, 352.375, 0, 0, 0, 0, 934.023, 399.399, 0, 0, 0, 0, 766.763, 341.061, 0, 0, 0, 0, 739.807, 402.963, 0, 0, 0, 0, 572.318, 379.799, 0, 0, 0, 0, 346.03, 429.69, 0, 0, 0, 0, 244.918, 358.032, 0, 0, 0, 0, 112.615, 378.018, 0, 0, 0, 0, 73.7984, 263.279, 0, 0, 0, 0, 22.8867, 184.083, 0, 0, 0, 0, 123.296, 58.2183, 0, 0, 0, 0, 177.036, 137.414, 0, 0, 0, 0, 319.872, 111.958, 0, 0, 0, 0, 433.338, 132.13, 0, 0, 0, 0, 585.744, 148.728, 0, 0, 0, 0, 696.052, 76.6031, 0, 0, 0, 0, 759.692, 165.699, 0, 0, 0, 0, 884.143, 141.657, 0, 0, 0, 0, 903.733, 215.874, 0, 0, 0, 0, 858.687, 300.049, 0, 0, 0, 0, 717.266, 365.103, 0, 0, 0, 0, 613.3, 413.654, 0, 0, 0, 0, 458.283, 399.399, 0, 0, 0, 0, 324.114, 383.487, 0, 0, 0, 0, 228.431, 386.927, 0, 0, 0, 0, 126.124, 339.647, 0, 0, 0, 0, -25.1965, 352.375, 0, 0, 0, 0, -111.464, 325.505 )
}

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )
enemies = [ ExtResource( 2 ) ]
bad_spawns = [ ExtResource( 3 ) ]

[node name="spawn_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Path2DCircle" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Path2DRight" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="Path2DLeft" type="Path2D" parent="."]
curve = SubResource( 3 )
[connection signal="timeout" from="spawn_cooldown" to="." method="_on_spawn_cooldown_timeout"]
